--- a/root/admin/userlist.html
+++ b/root/admin/userlist.html
@@ -15,7 +15,9 @@
   [%IF user.role!="admin"%]  
         <div class="panel panel-info col-sm-offset-2 col-sm-6">
           <div class="panel-body col-sm-offset-2 col-sm-6">
-                [% user.email %]
+          <a href="[% c.uri_for('/user/profile/' _ user.id) %]" class="link">
+            [% user.email %]
+          </a>
           </div>
           <div class="col-sm-4" style="display: inline-block; margin-top: 1%; "> 
               
